Added more multiverse and guava tests